--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
       </div>
     </section>
     <footer>
-      <p>This website was created for Web Technology module’s Coursework.</p>
+      <p>This website was created to fulfill Web Technology
+        module’s requirements and does not represent an actual company or service.</p>
       <p>&copy; 2024 Minimalist Furniture Co.</p>
     </footer>
     <script>
